generalize button css

--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -8,11 +8,11 @@
 		Reviewing "{{title}}"
 	</div>
 	<div id="afchButtons">
-		{{#accept}}<a id="afchAccept" class="accept afch-button">Accept</a>{{/accept}}
-		{{#decline}}<a id="afchDecline" class="decline afch-button">Decline</a>{{/decline}}
-		{{#comment}}<a id="afchComment" class="comment afch-button">Comment</a>{{/comment}}
-		{{#submit}}<a id="afchSubmit" class="submit afch-button">Submit</a>{{/submit}}
-		<a id="afchG13" class="g13 afch-button {{^g13}}hidden{{/g13}}">Tag for G13 deletion</a>
+		{{#accept}}<a id="afchAccept" class="accept afch-button gradient-button">Accept</a>{{/accept}}
+		{{#decline}}<a id="afchDecline" class="decline afch-button gradient-button">Decline</a>{{/decline}}
+		{{#comment}}<a id="afchComment" class="comment afch-button gradient-button">Comment</a>{{/comment}}
+		{{#submit}}<a id="afchSubmit" class="submit afch-button gradient-button">Submit</a>{{/submit}}
+		<a id="afchG13" class="g13 afch-button gradient-button {{^g13}}hidden{{/g13}}">Tag for G13 deletion</a>
 	</div>
 </div>
 <!-- /main -->
