--- a/src/afch.css
+++ b/src/afch.css
@@ -38,6 +38,15 @@
 	vertical-align: top;
 }
 
+#afchSubmit {
+	text-align: center;
+	width: 30%;
+	padding: 5px;
+	margin-top: 10px;
+	margin-left: auto;
+	margin-right: 0px;
+}
+
 .header {
 	height: 60px;
 	line-height: 1.2em;
