--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -42,4 +42,23 @@
 </div>
 <!-- /decline -->
 
+<!-- comment -->
+<div id="afchReviewPanel" class="comment">
+	<div id="afchHeader" class="header">Commenting...</div>
+	<div id="afchContent" class="content">
+
+		<textarea id="commentText" class="afch-input afch-textarea"
+			placeholder="Enter your comment about the submission using wikicode syntax..." cols="100" rows="5"></textarea>
+
+    <div class="afch-option">
+      <input type="checkbox" id="notifyUser" class="afch-input" {{#notifyByDefault}}checked{{/notifyByDefault}} />
+      <label for="notifyUser" class="afch-label">Notify submitter</label>
+    </div>
+
+		<div id="afchSubmit" class="gradient-button comment">Post comment</div>
+
+	</div>
+</div>
+<!-- /comment -->
+
 //</nowiki>
