--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -61,4 +61,28 @@
 </div>
 <!-- /comment -->
 
+<!-- submit -->
+<div id="afchReviewPanel" class="submit">
+	<div id="afchHeader" class="header">Submitting...</div>
+	<div id="afchContent" class="content">
+
+		<div id="afchSubmitForm" data-running="Submitting..." data-done="Submitted"
+		class="gradient-button submit">Submit</div>
+
+	</div>
+</div>
+<!-- /submit -->
+
+<!-- g13 -->
+<div id="afchReviewPanel" class="g13">
+	<div id="afchHeader" class="header">Requesting deletion...</div>
+	<div id="afchContent" class="content">
+
+		<div id="afchSubmitForm" data-running="Requesting deletion..." data-done="Deletion requested"
+		class="gradient-button g13">Request deletion</div>
+
+	</div>
+</div>
+<!-- /g13 -->
+
 //</nowiki>
