--- a/src/afch.css
+++ b/src/afch.css
@@ -5,6 +5,9 @@
 	display: none !important;
 }
 
+.centered {
+	text-align: center;
+}
 #afch-open {
 	font-size: 0.5em;
 	padding-left: 5px;
@@ -54,6 +57,11 @@
 	margin-top: 10px;
 	margin-left: auto;
 	margin-right: 0px;
+}
+
+#afchSubmitForm.button-centered {
+	margin-left: auto;
+	margin-right: auto;
 }
 
 #afchStatus {
@@ -136,6 +144,7 @@ div.disabled-button {
 
 .afch-option {
 	display: block;
+	padding: 5px;
 }
 
 /* MAIN (+SPLASH) */
@@ -199,6 +208,11 @@ div.disabled-button {
 
 .comment #afchContent {
 	text-align: right;
+}
+
+#commentText {
+	height: 100px;
+	width: 60%;
 }
 
 /* TAG FOR G13 DELETION */
