Add reload link; center menus; remove custom "done" text option due to potential error handling headaches

--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -25,8 +25,7 @@
 		<input type="text" id="newTitle" class="afch-input afch-textfield" placeholder="Target page name"
 			{{#newTitle}}value="{{newTitle}}"{{/newTitle}} />
 
-		<div id="afchSubmitForm" data-running="Accepting submission..." data-done="Submission accepted"
-		class="gradient-button accept">Accept &amp; publish</div>
+		<div id="afchSubmitForm" data-running="Accepting submission..." class="gradient-button accept">Accept &amp; publish</div>
 
 	</div>
 </div>
@@ -116,8 +115,7 @@
 			</div>
 		</div>
 
-		<div id="afchSubmitForm" data-running="Decling submission..." data-done="Submission declined"
-		class="gradient-button button-centered decline hidden">Decline submission</div>
+		<div id="afchSubmitForm" data-running="Decling submission..." class="gradient-button button-centered decline hidden">Decline submission</div>
 
 	</div>
 </div>
@@ -126,7 +124,7 @@
 <!-- comment -->
 <div id="afchReviewPanel" class="comment">
 	<div id="afchHeader" class="header">Commenting...</div>
-	<div id="afchContent" class="content">
+	<div id="afchContent" class="content centered">
 
 		<textarea id="commentText" class="afch-input afch-textfield afch-textarea"
 			placeholder="Enter your comment about the submission using wikicode syntax. Your signature will be added automatically."
@@ -137,8 +135,7 @@
 		<label for="notifyUser" class="afch-label">Notify submitter</label>
 	</div>
 
-		<div id="afchSubmitForm" data-running="Commenting on submission..." data-done="Comment posted"
-		class="gradient-button comment">Post comment</div>
+		<div id="afchSubmitForm" data-running="Commenting on submission..." class="gradient-button button-centered comment">Post comment</div>
 
 	</div>
 </div>
@@ -159,8 +156,7 @@
 		</select>
 		<input id="submitterName" type="text" class="afch-input hidden" placeholder="Username" />
 
-		<div id="afchSubmitForm" data-running="Submitting..." data-done="Submitted"
-		class="gradient-button submit button-centered">Submit</div>
+		<div id="afchSubmitForm" data-running="Submitting..." class="gradient-button button-centered submit">Submit</div>
 
 	</div>
 </div>
@@ -169,10 +165,9 @@
 <!-- g13 -->
 <div id="afchReviewPanel" class="g13">
 	<div id="afchHeader" class="header">Requesting deletion...</div>
-	<div id="afchContent" class="content">
+	<div id="afchContent" class="content centered">
 
-		<div id="afchSubmitForm" data-running="Requesting deletion..." data-done="Deletion requested"
-		class="gradient-button g13">Request deletion</div>
+		<div id="afchSubmitForm" data-running="Requesting deletion..." class="gradient-button button-centered g13">Request deletion</div>
 
 	</div>
 </div>
