--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -21,9 +21,108 @@
 	<div id="afchHeader" class="header">Accepting...</div>
 	<div id="afchContent" class="content">
 
-		<label for="newTitle" class="afch-label">Move submission to</label>
-		<input type="text" id="newTitle" class="afch-input afch-textfield" placeholder="Target page name"
-			{{#newTitle}}value="{{newTitle}}"{{/newTitle}} />
+		<div id="newTitleWrapper">
+			<label for="newTitle" class="afch-label">New title</label>
+			<input type="text" id="newTitle" class="afch-input afch-textfield" placeholder="Target page name"
+				{{#newTitle}}value="{{newTitle}}"{{/newTitle}} />
+			<span id="titleStatus"></span>
+		</div>
+
+		<div id="assessmentWrapper">
+			<label for="newAssessment" class="afch-label">Article assessment</label>
+			<select id="newAssessment" class="afch-input">
+				<option value="" selected></option>
+				<option value="B">B-class</option>
+				<option value="C">C-class</option>
+				<option value="start">Start-class</option>
+				<option value="stub">Stub-class</option>
+				<option value="list">List-class</option>
+				<option value="disambig">Disambig-class</option>
+				<option value="template">Template-class</option>
+				<option value="redirect">Redirect-class</option>
+				<option value="portal">Portal-class</option>
+				<option value="project">Project-class</option>
+				<option value="na">NA-class</option>
+			</select>
+		</div>
+
+		{{#hasWikiProjects}}
+		<div id="wikiProjectWrapper">
+			<label for="newWikiProjects" class="afch-label">Add WikiProjects</label>
+			<select id="newWikiProjects" class="afch-input" multiple>
+				{{#wikiProjects}}
+				<option value="{{templateName}}">{{displayName}}</option>
+				{{/wikiProjects}}
+			</select>
+		</div>
+		{{/hasWikiProjects}}
+
+		<div id="notifyWrapper" class="afch-option hidden">
+			<input type="checkbox" id="notifyUser" class="afch-input" checked/>
+			<label for="notifyUser" class="afch-label">Notify submitter</label>
+		</div>
+
+		<div id="isBiographyWrapper">
+			<label for="isBiography" class="afch-label">Is the article a biography?</label>
+			<input type="checkbox" id="isBiography" />
+		</div>
+
+		<div id="bioOptionsWrapper" class="hidden">
+
+			<div id="subjectNameWrapper">
+				<label for="subjectName" class="afch-label">Subject name (last, first)</label>
+				<input type="text" id="subjectName" class="afch-input afch-textfield" placeholder="Magellan, Ferdinand"/>
+			</div>
+
+			<div id="subjectDescriptionWrapper">
+				<label for="subjectDescription" class="afch-label">Description of the subject</label>
+				<input type="text" id="subjectDescription" class="afch-input afch-textfield" placeholder="Sea explorer"/>
+			</div>
+
+			<div id="birthYearWrapper">
+				<label for="birthYear" class="afch-label">Year of birth</label>
+				<input type="text" id="birthYear" class="afch-input afch-textfield" placeholder="1901"/>
+			</div>
+
+			<div id="birthMonthDayWrapper" class="hidden">
+				<label for="birthMonthDay" class="afch-label">Month and day of birth</label>
+				<input type="text" id="birthMonthDay" class="afch-input afch-textfield" placeholder="November 2"/>
+			</div>
+
+			<div id="birthPlaceWrapper">
+				<label for="birthPlace" class="afch-label">Place of birth</label>
+				<input type="text" id="birthPlace" class="afch-input afch-textfield" placeholder="Memphis, Tennessee"/>
+			</div>
+
+			<div id="lifeStatusWrapper">
+				<label for="lifeStatus" class="afch-label">Is the subject alive?</label>
+				<select id="lifeStatus" class="afch-input">
+					<option value="unknown" selected>Unknown</option>
+					<option value="living">Living</option>
+					<option value="dead">Dead</option>
+				</select>
+			</div>
+
+			<div id="deathWrapper" class="hidden">
+
+				<div id="deathYearWrapper">
+					<label for="deathYear" class="afch-label">Year of death</label>
+					<input type="text" id="deathYear" class="afch-input afch-textfield" placeholder="1999"/>
+				</div>
+
+				<div id="deathMonthDayWrapper" class="hidden">
+					<label for="deathMonthDay" class="afch-label">Month and day of death</label>
+					<input type="text" id="deathMonthDay" class="afch-input afch-textfield" placeholder="December 13"/>
+				</div>
+
+				<div id="deathPlaceWrapper">
+					<label for="deathPlace" class="afch-label">Place of death</label>
+					<input type="text" id="deathPlace" class="afch-input afch-textfield" placeholder="London, England"/>
+				</div>
+
+			</div>
+
+		</div>
 
 		<div id="afchSubmitForm" data-running="Accepting submission..." class="gradient-button accept">Accept &amp; publish</div>
 
