blank/csd: improvements based on available functionality, fix typo, support `cv`

--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -221,7 +221,7 @@
 			</div>
 
 			<div id="csdWrapper" class="afch-option hidden">
-				<input type="checkbox" id="blankSubmission" class="afch-input"/>
+				<input type="checkbox" id="csdSubmission" class="afch-input"/>
 				<label for="csdSubmission" class="afch-label">Nominate the submission for speedy deletion</label>
 			</div>
 
