Add dynamic category addition with parsing and suggestions
Add parseCategories to core; new dependency on mediawiki.api.category
for dynamic category suggestions. We’re still using jquery.chosen for
the category menu, but offering dynamic suggestions required some
sneakish behavior, which I’ve added more notes about inline.

--- a/src/afch.css
+++ b/src/afch.css
@@ -317,6 +317,20 @@ select#lifeStatus.afch-input {
 	border-color: #FF4136;
 }
 
+.accept .chzn-container {
+	margin-top: 10px;
+	vertical-align: bottom;
+}
+
+/*
+	Since we're hacking this dynamic suggestion feature into
+	jquery.chosen, we have to manually set the width of the input.
+	(see "Offer dynamic category suggestions" in submissions.js)
+*/
+#newCategories_chzn input {
+	width: 110% !important;
+}
+
 /* DECLINE */
 
 .decline {
