--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -13,6 +13,12 @@
 		{{#comment}}<a id="afchComment" class="comment afch-button gradient-button">Comment</a>{{/comment}}
 		{{#submit}}<a id="afchSubmit" class="submit afch-button gradient-button">Submit</a>{{/submit}}
 		<a id="afchG13" class="g13 afch-button gradient-button {{^g13}}hidden{{/g13}}">Request G13 deletion</a>
+		<div id="afchExtra" class="afch-button">
+			<a id="afchClean">Clean submission</a>
+			<a id="afchMark">
+				{{#alreadyUnderReview}}Unmark{{/alreadyUnderReview}}
+				{{^alreadyUnderReview}}Mark{{/alreadyUnderReview}} as under review</a>
+		</div>
 	</div>
 </div>
 <!-- /main -->
@@ -32,6 +38,15 @@
 	</table>
 </div>
 <!-- /warning-deletions-table -->
+
+<!-- quick-action-processing -->
+<div id="afchReviewPanel" class="{{actionClass}}">
+	<div id="afchHeader" class="header">{{actionTitle}}...</div>
+	<div id="afchContent" class="content centered">
+		<div id="afchSubmitForm" data-running="Working..." class="gradient-button button-centered {{actionClass}}">Working...</div>
+	</div>
+</div>
+<!-- /quick-action-processing -->
 
 <!-- accept -->
 <div id="afchReviewPanel" class="accept">
