--- a/src/afch.css
+++ b/src/afch.css
@@ -110,7 +110,7 @@ select .afch-input {
 	font-size: 14px;
 	height: 30px;
 	margin: 0px;
-	padding: 5px;
+	padding-left: 5px;
 	vertical-align: middle;
 	width: 25%;
 	min-width: 150px;
