--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -14,11 +14,14 @@
 		{{#submit}}<a id="afchSubmit" class="submit afch-button gradient-button">Submit</a>{{/submit}}
 		<a id="afchG13" class="g13 afch-button gradient-button {{^g13}}hidden{{/g13}}">Request G13 deletion</a>
 		<div id="afchExtra" class="afch-button">
-			<div>
-				<a id="afchClean">Clean submission</a>
-				<a id="afchMark">
-					{{#alreadyUnderReview}}Unmark{{/alreadyUnderReview}}{{^alreadyUnderReview}}Mark{{/alreadyUnderReview}} as under review
-				</a>
+			<div class="extra-wrapper">
+				<div class="extra-open">〈</div>
+				<div class="extra-links">
+					<a id="afchClean">Clean submission</a>
+					<a id="afchMark">
+						{{#alreadyUnderReview}}Unmark{{/alreadyUnderReview}}{{^alreadyUnderReview}}Mark{{/alreadyUnderReview}} as under review
+					</a>
+				</div>
 			</div>
 		</div>
 	</div>
