--- a/src/afch.css
+++ b/src/afch.css
@@ -359,6 +359,11 @@ select#lifeStatus.afch-input {
 	vertical-align: bottom;
 }
 
+/* Supplement jquery.chosen hackery; this is for the "manually add project" link. */
+#newWikiProjects_chzn a {
+	cursor: pointer;
+}
+
 /*
 	Since we're hacking this dynamic suggestion feature into
 	jquery.chosen, we have to manually set the width of the input.
